# Templa

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  _c_1_2_users_2aryas_2_one_drive_2_desktop_2_c_09_09_projects_2_templa_2include_2templa-include_2algorithms_8hpp-example.html  _c_1_2_users_2aryas_2_one_drive_2_desktop_2_c_09_09_projects_2_templa_2include_2templa-include_2static_for_8hpp-example.html  annotated_dup.js  concepts.html  concepts_8hpp.html  concepts_8hpp.js  concepttempla_1_1concepts_1_1_allocator_aware.html  concepttempla_1_1concepts_1_1_callable_with.html  concepttempla_1_1concepts_1_1_comparable.html  concepttempla_1_1concepts_1_1_container.html  concepttempla_1_1concepts_1_1_default_erasable.html  concepttempla_1_1concepts_1_1_hashable.html  concepttempla_1_1concepts_1_1_integral.html  concepttempla_1_1concepts_1_1_signed_integral.html  concepttempla_1_1concepts_1_1_subtractable.html  concepttempla_1_1concepts_1_1_unsigned_integral.html  convert_8hpp.html  convert_8hpp.js  dir_3b2aac5e2dd7b6b80afe9ed6e4269ae1.js  dir_9671bc686298f8f0abf72fd0da16681e.js  dir_b23d9f1487a29ea911b53d24d2e14a13.html  dir_b23d9f1487a29ea911b53d24d2e14a13.js  dir_e607953446b0273710c057f6f747a39a.html  dir_e607953446b0273710c057f6f747a39a.js  examples.html  examples.js  files.html  files_dup.js  flagnum_8hpp_source.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  group__algorithms.html  group__algorithms.js  group__concepts.js  (+108 more)
include/: templa.hpp
latex/: algorithms_8hpp.tex  concepts_8hpp.tex  concepts_8hpp_source.tex  convert_8hpp.tex  (+64 more)
(+858 files in other folders)
